Marker size in em instead of px

--- a/berlin.html
+++ b/berlin.html
@@ -12,10 +12,10 @@
       height: 100%;
     }
     .marker-xr {
-      width: 16px;
-      height: 16px;
-      margin-left: -8px;
-      margin-top: -8px;
+      width: 2em;
+      height: 2em;
+      margin-left: -1em;
+      margin-top: -1em;
     }
     .flag {
       width: 22px;
