--- a/berlin.html
+++ b/berlin.html
@@ -11,12 +11,6 @@
       width: 100%;
       height: 100%;
     }
-    .marker-xr {
-      width: 2em;
-      height: 2em;
-      margin-left: -1em;
-      margin-top: -1em;
-    }
     .flag {
       width: 22px;
       margin-right: 5px;
@@ -76,18 +70,6 @@
       }
     }
 
-    function bindPopups(feature, layer) {
-      if (feature.info) {
-        let content = '<b>{0}</b><br>{1}<br>{2}<br>'.format(
-          feature.info.dates, feature.info.name, feature.info.address);
-        feature.info.langs.forEach(token => {
-          content += '<img class="flag" alt="{0}" src="flag_{0}.svg" title="{1}">'
-                        .format(token, humanReadable(token));
-        });
-        layer.bindPopup(content);
-      }
-    }
-
     let map = new L.map('osm-map', {
       center: [52.5219, 13.4045],
       zoom: 13,
@@ -96,9 +78,39 @@
 
     createBaseLayer().addTo(map);
 
+    const markerSizeClass =
+      ".marker-xr {" +
+      "  width: {0}px; height: {0}px;" +
+      "  margin-left: -{1}px; margin-top: -{1}px;" +
+      "}";
+
+    function initDynamicMarkerSizeCSS(px) {
+      let sheet = document.createElement('style');
+      sheet.type = 'text/css';
+      document.getElementsByTagName('head')[0].appendChild(sheet);
+      return sheet.appendChild(
+        document.createTextNode(markerSizeClass.format(px, px / 2)));
+    }
+
+    let dynNodeCSS = initDynamicMarkerSizeCSS(18);
+    map.on("zoomend", () => {
+      const px = Math.max(1, map.getZoom() - 10) * 6;
+      dynNodeCSS.nodeValue = markerSizeClass.format(px, px / 2);
+    });
+
     const options = {
-      onEachFeature: bindPopups,
-      pointToLayer: function (feature, latlng) {
+      onEachFeature: (feature, layer) => {
+        if (feature.info) {
+          let content = '<b>{0}</b><br>{1}<br>{2}<br>'.format(
+            feature.info.dates, feature.info.name, feature.info.address);
+          feature.info.langs.forEach(token => {
+            content += '<img class="flag" alt="{0}" src="flag_{0}.svg" title="{1}">'
+                          .format(token, humanReadable(token));
+          });
+          layer.bindPopup(content);
+        }
+      },
+      pointToLayer: (feature, latlng) => {
         return L.marker(latlng, {
           icon: L.icon({
             iconUrl: 'marker-cafe.png',
